fixed layout issue on video section

--- a/styles.css
+++ b/styles.css
@@ -1193,6 +1193,7 @@ audio {
 
 #video-overview {
   width: 100%;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
